--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Redressed&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <div class="container">
         <div class="menu">
             <nav>
                 <ul>
@@ -20,6 +20,83 @@
                 </ul>
             </nav>
         </div>
+    <div class="container">
+        <div class="header">
+            <div class="col-2 content">
+                <h1><span class="highlight-1">HELLO I'M</span></h1>
+                <h1 class="mrg"><span class="highlight-2">NAZMUL HUDA</span></h1>
+                <p>Hi, I am a Professional Web developer And a Web Designer. I have a few years of experience in Web development.
+                   I can do anything web related. I like to fix various issues of the website. This type of work has a reputation
+                   with several of my clients. This kind of work is my main thing to satisfy the client.           
+                </p>
+                <a href="#" class="button" target="_blank">Hire Me </a>
+            </div>
+            <div class="col-2">
+                <img src="images/me.png" alt="">
+            </div>
+        </div>
     </div>
+    <section class="about">
+        <div class="container">
+            <div class="col-2">
+                <img src="images/me.png" alt="">
+            </div>
+            <div class="col-2 content1">
+                <h1>ABOUT</h1>
+                <p>
+                    I am Kazi Mohammad Nazmul Huda Rimon. I am a professional Web Designer and Web Developer. 
+                    I am student of Computer Science. I am doing Bsc in Computer Science & Engineering from Uttara University.
+                    I want to be a Cyber Security Professional also.
+                </p>
+                <a href="#" class="button" target="_blank">Dowload CV</a>
+            </div>
+        </div>
+    </section>
+    <section class="latest-projects">
+        <div class="container">
+            <h1><span class="highlight-2">LATEST</span><span class="highlight-1">  WORKING PROJECT</span></h1>
+                <div class="col-3 project1">
+                    <img src="images/gym.png" alt="gym image">
+                    <h3><span class="highlight-1">Power-x-gym (gym website)</span></h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    
+                </div>
+                <div class="col-3 project1">
+                    <img src="images/tour.png" alt="Tour image">
+                    <h3><span class="highlight-1">Creative Agency</span></h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+                <div class="col-3 project1">
+                    <img src="images/music.png" alt="hard rock music image">
+                    <h3><span class="highlight-1">Hard Rock Music</span></h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+        </div>
+    </section>
+    <section class="work-enquiry">
+            <div class="last-sec">
+                <div class="col">
+                    <h1>WORK ENQUIRY</h1>
+                </div>
+                <div class="col">
+                    <a href="#" class="button">HIRE ME</a>
+                </div>
+            </div>
+    </section>
+    <section class="footer">
+            <h3>STAY CONNECTED</h3>
+            <h1>nazmulhuda0327@gmail.com</h1>
+            <div class="social-link">
+              <div class="col3">
+                 <img src="images/fb.jpg" alt="">
+              </div>
+              <div class="col3">
+                  <img src="images/insta.png" alt="">
+              </div>
+              <div class="col3">
+                  <img src="images/behance.png" alt="">
+              </div>
+            </div>
+    </section>
 </body>
 </html>
