--- a/index.html
+++ b/index.html
@@ -88,12 +88,8 @@
             <h1>nazmulhuda0327@gmail.com</h1>
             <div class="social-link">
               <div class="col3">
-                 <img src="images/fb.jpg" alt="">
-              </div>
-              <div class="col3">
-                  <img src="images/insta.png" alt="">
-              </div>
-              <div class="col3">
+                  <img src="images/link.png" alt="">
+                  <img src="images/twitterr.png" alt="">
                   <img src="images/behance.png" alt="">
               </div>
             </div>
