--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                    I can do anything web related. I like to fix various issues of the website. This type of work has a reputation
                    with several of my clients. This kind of work is my main thing to satisfy the client.           
                 </p>
-                <a href="#" class="button" target="_blank">Hire Me </a>
+                <a href="https://www.linkedin.com/in/md-nazmul-huda-rimon-6a588a190/" class="button" target="_blank">Hire Me </a>
             </div>
             <div class="col-2">
-                <img src="images/me.png" alt="">
+                <img src="images/me.png" alt="My picture">
             </div>
         </div>
     </div>
@@ -48,7 +48,7 @@
                     I am student of Computer Science. I am doing Bsc in Computer Science & Engineering from Uttara University.
                     I want to be a Cyber Security Professional also.
                 </p>
-                <a href="#" class="button" target="_blank">Dowload CV</a>
+                <a href="https://www.linkedin.com/in/md-nazmul-huda-rimon-6a588a190/" class="button" target="_blank">Dowload CV</a>
             </div>
         </div>
     </section>
@@ -79,7 +79,8 @@
                     <h1>WORK ENQUIRY</h1>
                 </div>
                 <div class="col">
-                    <a href="#" class="button">HIRE ME</a>
+                    <a href="https://www.linkedin.com/in/md-nazmul-huda-rimon-6a588a190/" class="button"target="_blank">   
+                    HIRE ME</a>
                 </div>
             </div>
     </section>
@@ -88,9 +89,11 @@
             <h1>nazmulhuda0327@gmail.com</h1>
             <div class="social-link">
               <div class="col3">
-                  <img src="images/link.png" alt="">
+                  <a href="https://www.linkedin.com/in/md-nazmul-huda-rimon-6a588a190/" target="_blank"> 
+                    <img src="images/link.png" alt=""> 
                   <img src="images/twitterr.png" alt="">
-                  <img src="images/behance.png" alt="">
+                  <a href="https://www.behance.net/nazmulhudarimon/" target="_blank">
+                    <img src="images/behance.png" alt=""></a>
               </div>
             </div>
     </section>
