--- a/index.html
+++ b/index.html
@@ -91,9 +91,11 @@
               <div class="col3">
                   <a href="https://www.linkedin.com/in/md-nazmul-huda-rimon-6a588a190/" target="_blank"> 
                     <img src="images/link.png" alt=""> 
-                  <img src="images/twitterr.png" alt="">
                   <a href="https://www.behance.net/nazmulhudarimon/" target="_blank">
                     <img src="images/behance.png" alt=""></a>
+                  <a href="https://twitter.com/" target="_blank">
+                    <img src="images/twitterr.png" alt="">
+                  </a>
               </div>
             </div>
     </section>
