--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Redressed&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css
+    ">
 </head>
 <body>
         <div class="menu">
@@ -29,7 +30,10 @@
                    I can do anything web related. I like to fix various issues of the website. This type of work has a reputation
                    with several of my clients. This kind of work is my main thing to satisfy the client.           
                 </p>
-                <a href="https://www.linkedin.com/in/md-nazmul-huda-rimon-6a588a190/" class="button" target="_blank">Hire Me </a>
+                <a href="https://www.linkedin.com/in/md-nazmul-huda-rimon-6a588a190/" class="button" target="_blank">
+                    Hire Me <i class="fa fa-arrow-right" aria-hidden="true"></i>
+
+                </a>
             </div>
             <div class="col-2">
                 <img src="images/me.png" alt="My picture">
@@ -48,7 +52,9 @@
                     I am student of Computer Science. I am doing Bsc in Computer Science & Engineering from Uttara University.
                     I want to be a Cyber Security Professional also.
                 </p>
-                <a href="https://www.linkedin.com/in/md-nazmul-huda-rimon-6a588a190/" class="button" target="_blank">Dowload CV</a>
+                <a href="https://www.linkedin.com/in/md-nazmul-huda-rimon-6a588a190/" class="button" target="_blank">Dowload CV
+                    <i class="fa fa-download" aria-hidden="true"></i>
+                </a>
             </div>
         </div>
     </section>
@@ -80,7 +86,8 @@
                 </div>
                 <div class="col">
                     <a href="https://www.linkedin.com/in/md-nazmul-huda-rimon-6a588a190/" class="button"target="_blank">   
-                    HIRE ME</a>
+                    HIRE ME  <i class="fa fa-arrow-right" aria-hidden="true"></i>
+s                </a>
                 </div>
             </div>
     </section>
